feat: project modernization and rewrite